<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/msg_no_data"
            android:visibility="gone" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_places_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <LinearLayout
            android:id="@+id/ll_permission_denied"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_permission_denied" />

            <Button
                android:id="@+id/bt_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_retry" />
        </LinearLayout>
    </FrameLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_gravity="center_horizontal|bottom"
        android:contentDescription="@string/cd_powered_by_google"
        android:src="@drawable/powered_by_google_on_white" />
</LinearLayout>