<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/places_list_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">

            <ImageView
                android:id="@+id/iv_place_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cd_place_image"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_image"
                tools:src="@drawable/elevador_lacerda1" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:layout_marginEnd="-12dp"
                android:layout_marginRight="-12dp"
                android:layout_marginTop="-24dp">

                <ImageView
                    android:id="@+id/iv_distance_background"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:transitionName="@string/transition_distance"
                    android:contentDescription="@null"
                    android:focusable="false"
                    app:srcCompat="@drawable/ic_circle" />

                <TextView
                    android:id="@+id/tv_place_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    tools:text="3000m" />

            </FrameLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="Elevador Lacerda" />

    </LinearLayout>

</android.support.v7.widget.CardView>