<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/first_card_height"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"
    >

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/iv_place_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cd_place_image"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_image"
                tools:src="@drawable/elevador_lacerda1" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:layout_marginRight="-24dp"
                android:layout_marginEnd="-24dp"
                android:layout_marginTop="-24dp"
                >

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:id="@+id/iv_distance_background"
                    android:transitionName="@string/transition_distance"
                    android:contentDescription="@null"
                    android:focusable="false"
                    app:srcCompat="@drawable/ic_circle"

                    />

                <TextView
                    android:id="@+id/tv_place_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    tools:text="3000m" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_place_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:textSize="22sp"
                android:background="@drawable/place_title_gradient_background"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="4dp"
                android:paddingTop="8dp"
                android:textColor="@android:color/white"
                tools:text="ElevadorLacerda" />
        </FrameLayout>

</android.support.v7.widget.CardView>